--- a/package.json
+++ b/package.json
@@ -63,10 +63,7 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
+        "functions": 95
       }
     },
     "collectCoverageFrom": [
