style: Enable prettier

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build-storybook": "build-storybook"
   },
   "lint-staged": {
-    "{src,test}/**/*.ts": [
+    "{src,test}/**/*.{ts,tsx}": [
       "prettier --write",
       "git add"
     ]
