--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0-development",
   "description": "",
   "keywords": [],
-  "main": "dist/inhabit-react.umd.js",
-  "module": "dist/inhabit-react.es5.js",
-  "typings": "dist/types/inhabit-react.d.ts",
+  "source": "src/inhabit-react.tsx",
+  "main": "dist/inhabit-react.js",
+  "module": "dist/inhabit-react.mjs",
+  "unpkg": "dist/inhabit-react.umd.js",
+  "typings": "dist/inhabit-react.d.ts",
   "files": [
     "dist"
   ],
@@ -21,8 +23,8 @@
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
+    "build": "microbundle && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "microbundle watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
@@ -95,7 +97,6 @@
     "@types/react-test-renderer": "^16.8.1",
     "@types/storybook__react": "^4.0.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
@@ -106,18 +107,13 @@
     "jest-config": "^23.6.0",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
+    "microbundle": "^0.11.0",
     "prettier": "^1.14.3",
     "prompt": "^1.0.0",
     "react-dom": "^16.8.1",
     "react-test-renderer": "^16.8.1",
     "replace-in-file": "^4.0.0",
     "rimraf": "^2.6.2",
-    "rollup": "^1.1.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.19.2",
     "semantic-release": "^15.13.3",
     "travis-deploy-once": "^5.0.9",
     "ts-jest": "^24.0.0",
